# dfl

./: .gitignore  .gitmodules  LICENSE.txt  README.md
cloud_setup/: README.md
cloud_setup/ansible/: hosts.ini  notes.txt  prepare.yml  zkp_setup.yml
cloud_setup/terraform/: .terraform.lock.hcl  main.tf  notes.txt  outputs.tf  providers.tf  ssh.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
cloud_setup/terraform_zkp/: main.tf  providers.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
linux_out/: README.md  notes.txt
neural_network/: Makefile  README.md  notes.txt  private_key.pem  public_key.pem  weights_and_biases.csv
neural_network/src/: functions.cpp  functions.h
neural_network/test/: aggr_worker.py  epoch.txt  local_aggr.py  local_aggregation_log.txt  local_test_aggregation.py  local_test_epoch.py  local_training.py  local_training_log.txt  local_worker.txt  plot_training.py  plot_worker.py
node_code/: Makefile
node_code/src/: functions.h
node_server/: .env  README.md  package-lock.json  package.json  tsconfig.json
node_server/abi/: AggregatorSelection.json  gm.json  registry.json
node_server/data/: test.txt
node_server/src/: bc_client.ts  ipfs.ts  server.ts
node_server/test/: local_test.py  metrics_log.txt
ra_code/: README.md
ra_code/data_03_05/: request-file.txt
ra_code/experiments/: milan_pubkey.pem  milan_pubkey_hex.txt
remote_attestation/: deployment-guide.md
remote_attestation/apps/: Cargo.toml
remote_attestation/methods/guest/: Cargo.toml
smart_contract/: State_01.sol  notes.txt
(+67 files in other folders)
