[package]
name = "guests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "is-even"
path = "src/bin/is_even.rs"

[[bin]]
name = "verify-ar"
path = "src/bin/verify_ar.rs"

[workspace]

[dependencies]
alloy-primitives = { version = "0.6", default-features = false, features = ["rlp", "serde", "std"] }
alloy-sol-types = { version = "0.6" }
risc0-zkvm = { version = "1.0", default-features = false, features = ['std'] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
x509-verify = "0.4.5"
x509-parser = "0.9.0"
x509-cert = "0.2.5"
x509-ocsp = "=0.2.1"
rsa = "0.9.6"
sha2 = "0.10.8"
p256 = { version = "0.9", features = ["ecdsa"] }
ecdsa = "0.13"

[profile.release]
lto = "thin"
